layout issue fixed in different screens

--- a/apps/frontend/src/App.css
+++ b/apps/frontend/src/App.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+
+.max-w-custom {
+  max-width: 85%;
+  min-width: 85%;
+}
